--- a/src/app/shared/reusableComponent/navigation-bar/navigation-bar.html
+++ b/src/app/shared/reusableComponent/navigation-bar/navigation-bar.html
@@ -1,30 +1,3 @@
-<!-- <nav class="bg-gray-700 text-white h-[60px] flex items-center pl-10 pr-10">
-    <ul class="flex items-center gap-10 w-full">
-        <li class="hover:underline">
-            <a routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" routerLink="">
-                Home
-            </a>
-        </li>
-
-        <li class="hover:underline">
-            <a routerLinkActive="active" routerLink="json-placeholder-users">
-                Json Placeholder Users
-            </a>
-        </li>
-
-        <li class="hover:underline">
-            <a routerLinkActive="active" routerLink="github-finder">
-                Github Finder
-            </a>
-        </li>
-
-    </ul>
-    <div class="flex gap-5">
-        <button class="cursor-pointer hover:underline" (click)="openLoginPage()">Login</button>
-        <button class="cursor-pointer hover:underline" (click)="openRegisterPage()">Register</button>
-    </div>
-</nav>
-<router-outlet /> -->
 
 
 <mat-toolbar color="primary" class="navbar-toolbar">
@@ -58,10 +31,10 @@
 
   <span class="spacer"></span>
 
-  <button mat-stroked-button color="accent" (click)="openLoginPage()">
+  <button mat-stroked-button color="accent" (click)="openLoginPage()" disableRipple>
     Login
   </button>
-  <button mat-flat-button color="warn" (click)="openRegisterPage()">
+  <button mat-flat-button color="warn" (click)="openRegisterPage()" disableRipple>
     Register
   </button>
 </mat-toolbar>
